# Sistema-Vigilancia-Hibrido

./: Bot_Cerebro.py  CMakeLists.txt  Principal.cpp  README.md  bg.txt  generar_datos.py
modelo_final/: cascade.xml  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage14.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
